[workspace]
members = ["xtask"]
resolver = "2"

[package]
name = "Hybrid-Mount"
version = "3.0.2"
edition = "2024"
description = "Waiting for Daemon..."
authors = ["Andrei & Hybrid Mount Developers"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/KingMikhail/Meta-Hybrid-Mount"

[package.metadata.hybrid_mount]
name = "Hybrid Mount"
update = "https://raw.githubusercontent.com/KingMikhail/Meta-Hybrid-Mount/master/update.json"


[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
extattr = "1"
rustix = { version = "1.1", features = ["fs", "mount"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"
chrono = "0.4"
procfs = "0.18"
mimalloc = { version = "0.1.48", features = ["no_thp", "override"] }
rayon = "1.11"
walkdir = "2.5.0"
nix = { version = "0.31.1", features = ["fs", "ioctl", "mount"] }
regex-lite = "0.1.9"
ksu = { git = "https://github.com/Tools-cx-app/ksu.git", version = "0.2.0" }
jwalk = "0.8.1"
log = "0.4.29"
flate2 = "1.1.9"
fastrand = "2.3.0"
loopdev = { git = "https://github.com/Hybrid-Mount/loopdev.git", version = "0.5.0" }

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11.8"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true

[build-dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["serde_derive"] }
toml = "1.0"
